# nubdt

./: .docker-compose.yml.swp  .dockerignore  .gitignore  BENCHMARKS.md  DATABASE_ACCESS.md  DOCKER.md  DOCKER_DOCS_DEPLOYMENT.md  DOCKER_SETUP_SUMMARY.md  DOCKER_WEB_NETWORK.md  Dockerfile  Dockerfile.docs  MULTI_LANGUAGE_CLIENTS.md  Makefile  PRODUCTION_READY.md  PROJECT_STATUS.md  PYTHON_INTEGRATION.md  QUICKSTART.md  QUICK_START.md  QUICK_START_WEB.md  README.md  SUMMARY.md  WEBSITE_SUMMARY.md  build.zig  check.py  demo.sh  docker-compose.docs.yml  docker-compose.full.yml  docker-compose.web-stack.yml  docker-compose.yml  docker-demo.sh  docs-nginx.conf  nubdb.py  nubdb_client.py  test.sh
.github/workflows/: pages.yml  pypi-publish.yml
clients/: LANGUAGES.md  QUICKSTART.md  README.md
clients/go/: nubdb.go
clients/java/: NubDB.java
clients/nodejs/: nubdb.js
clients/python/: nubdb.py
clients/ruby/: nubdb.rb  nubdb_test.rb
clients/rust/: nubdb.rs
docs/: API_INTEGRATION.md  DEPLOY.md  README.md  index.html  script.js  serve.sh  style.css
k8s/: README.md  deployment.yaml  namespace.yaml  service-nodeport.yaml
nubdb-python/: LICENSE  README.md  pyproject.toml
nubdb-python/src/nubdb/: __init__.py  client.py  exceptions.py
nubdb-python/src/nubdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: PYTHON_CLIENT.md  README.txt  example.py  nubdb.py  working_example.py
src/: aof.zig  bench.zig  compaction.zig  hash.zig  main.zig  protocol.zig  server.zig  storage.zig
